--- a/vaunt-generator/build.gradle
+++ b/vaunt-generator/build.gradle
@@ -1,16 +1,22 @@
-plugins {
-    id 'java'
+group = 'com.hltech'
+version = '1.0-SNAPSHOT'
+
+buildscript {
+    ext {
+        repos = {
+            gradlePluginPortal()
+            mavenLocal()
+            mavenCentral()
+        }
+        coverallsVersion = '2.8.2'
+    }
+    repositories (repos)
+    dependencies {
+        classpath "org.kt3k.gradle.plugin:coveralls-gradle-plugin:$coverallsVersion"
+    }
 }
 
-group 'com.hltech'
-version '1.0-SNAPSHOT'
+repositories(repos)
 
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-}
+apply plugin: 'java'
+apply from: 'gradle/codequality.gradle'
