--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         groovyAllVersion = '2.4.13'
         spockVersion = '1.1-groovy-2.4'
         coverallsVersion = '2.8.2'
+        lombokVersion = '1.16.18'
     }
     repositories (repos)
     dependencies {
@@ -35,6 +36,7 @@ allprojects {
 
 subprojects {
     dependencies {
+        compile "org.projectlombok:lombok:$lombokVersion"
         testCompile "org.spockframework:spock-core:$spockVersion"
         testCompile "org.codehaus.groovy:groovy-all:$groovyAllVersion"
     }
