Write service representation to file as json.

--- a/vaunt-generator/build.gradle
+++ b/vaunt-generator/build.gradle
@@ -9,6 +9,9 @@ buildscript {
 
 dependencies {
     compile "org.reflections:reflections:$reflectionsVersion"
+    compile "com.fasterxml.jackson.datatype:jackson-datatype-guava:$jacksonVersion"
+
+    testCompile 'com.jayway.jsonpath:json-path-assert:2.2.0'
 }
 
 task wrapper(type: Wrapper) {
