--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ subprojects {
         
         testCompile "org.spockframework:spock-core:$spockVersion"
         testCompile "org.codehaus.groovy:groovy-all:$groovyAllVersion"
+        testRuntimeOnly "net.bytebuddy:byte-buddy:1.9.12"
     }
 
     jacocoTestReport {
