--- a/vaunt-validator/build.gradle
+++ b/vaunt-validator/build.gradle
@@ -1,6 +1,16 @@
 group = 'com.hltech'
 version = '1.0-SNAPSHOT'
 
+buildscript {
+    ext {
+        guavaVersion = '27.1-jre'
+    }
+}
+
+dependencies {
+    compile "com.google.guava:guava:$guavaVersion"
+}
+
 task wrapper(type: Wrapper) {
     jarFile = "../gradle/wrapper/gradle-wrapper.jar"
     scriptFile = "../gradlew"
