--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ buildscript {
         coverallsVersion = '2.8.2'
         lombokVersion = '1.16.18'
         jacksonVersion = '2.9.8'
+        byteBuddyVersion = '1.9.12'
+        jsonPathAssertVersion = '2.2.0'
+        objenesisVersion = '3.0.1'
     }
     repositories (repos)
     dependencies {
@@ -43,7 +46,8 @@ subprojects {
         
         testCompile "org.spockframework:spock-core:$spockVersion"
         testCompile "org.codehaus.groovy:groovy-all:$groovyAllVersion"
-        testRuntimeOnly "net.bytebuddy:byte-buddy:1.9.12"
+        testRuntimeOnly "net.bytebuddy:byte-buddy:$byteBuddyVersion"
+        testRuntimeOnly "org.objenesis:objenesis:$objenesisVersion"
     }
 
     jacocoTestReport {
