--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,7 @@ project(":vaunt-generator").projectDir = file("./vaunt-generator")
 
 include ':vaunt-validator'
 project(":vaunt-validator").projectDir = file("./vaunt-validator")
+
+include 'vaunt-core'
+project(":vaunt-core").projectDir = file("./vaunt-core")
+
