Added configuration for automatic releases to mvn central

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,11 @@ jobs:
   - stage: build vaunt with gradle & generate reports
     script:
     - ./gradlew clean build jacocoRootReport coveralls
+  - stage: release to maven central
+    deploy:
+      skip_cleanup: true
+      provider: script
+      on:
+        branch: master
+        tags: true
+      script: bash deploy-to-maven-central.sh
