--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,31 @@ buildscript {
         byteBuddyVersion = '1.9.12'
         jsonPathAssertVersion = '2.2.0'
         objenesisVersion = '3.0.1'
+        axionReleasePluginVersion = '1.10.0'
+        nexusStagingPluginVersion = '0.20.0'
+        nexusPublishPluginVersion = '0.2.0'
+        sonarqubePluginVersion = '2.7'
     }
     repositories (repos)
     dependencies {
         classpath "org.kt3k.gradle.plugin:coveralls-gradle-plugin:$coverallsVersion"
+        classpath "pl.allegro.tech.build:axion-release-plugin:$axionReleasePluginVersion"
+        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:$nexusStagingPluginVersion"
+        classpath "de.marcphilipp.gradle:nexus-publish-plugin:$nexusPublishPluginVersion"
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:$sonarqubePluginVersion"
     }
 }
+
+apply plugin: 'io.codearte.nexus-staging'
+apply plugin: 'pl.allegro.tech.build.axion-release'
+
+scmVersion {
+    tag {
+        prefix = 'pact-gen-release'
+    }
+}
+
+project.version = scmVersion.version
 
 allprojects {
     repositories (repos)
@@ -28,6 +47,10 @@ allprojects {
     apply plugin: 'jacoco'
     apply plugin: 'checkstyle'
     apply plugin: 'com.github.kt3k.coveralls'
+    apply plugin: 'maven-publish'
+    apply plugin: 'signing'
+    apply plugin: 'org.sonarqube'
+    apply plugin: 'de.marcphilipp.nexus-publish'
 
     jacoco {
         toolVersion = "0.8.1"
@@ -35,6 +58,77 @@ allprojects {
 
     checkstyle {
         toolVersion "8.1"
+    }
+
+    javadoc {
+        failOnError false
+    }
+
+    task javadocJar(type: Jar) {
+        from javadoc
+        archiveClassifier = 'javadoc'
+    }
+
+    task sourcesJar(type: Jar) {
+        from sourceSets.main.allSource
+        archiveClassifier = 'sources'
+    }
+
+    artifacts {
+        archives javadocJar, sourcesJar
+    }
+
+    publishing {
+        publications {
+            mavenJava(MavenPublication) {
+                from(components.java)
+                artifact sourcesJar
+                artifact javadocJar
+                pom {
+                    version = project.version
+                    artifactId  = project.name
+                    name = project.name
+                    groupId = project.group
+                    packaging = 'jar'
+
+                    description = 'Toolkit to define and validate contracts in JMS'
+                    url = 'https://github.com/HLTech/vaunt'
+                    inceptionYear = '2018'
+
+                    scm {
+                        connection = 'scm:git:https://github.com/HLTech/vaunt.git'
+                        developerConnection = 'scm:git:git@github.com:HLTech/vaunt.git'
+                        url = 'https://github.com/HLTech/vaunt.git'
+                    }
+
+                    licenses {
+                        license {
+                            name = 'The MIT License'
+                            url = 'https://opensource.org/licenses/MIT'
+                        }
+                    }
+
+                    developers {
+                        developer {
+                            id = 'Felipe444'
+                            name = 'Filip Łazarski'
+                            email = 'filip.lazarski@hl.co.uk'
+                        }
+                        developer {
+                            id = 'matek2305'
+                            name = 'Mateusz Urbański'
+                            email = 'mateusz.urbanski@hl.co.uk'
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    if (project.hasProperty("signing.keyId")) {
+        signing {
+            sign publishing.publications.mavenJava
+        }
     }
 }
 
@@ -67,15 +161,15 @@ coveralls {
     jacocoReportPath = "${buildDir}/reports/jacoco/jacocoRootReport/jacocoRootReport.xml"
 }
 
-task jacocoRootReport(type: org.gradle.testing.jacoco.tasks.JacocoReport) {
+task jacocoRootReport(type: JacocoReport) {
     def testableSubprojects = subprojects.findAll {it.name != 'vaunt-core'}
 
     dependsOn = testableSubprojects.test
 
-    additionalSourceDirs = files(testableSubprojects.sourceSets.main.allSource.srcDirs)
-    sourceDirectories = files(testableSubprojects.sourceSets.main.allSource.srcDirs)
-    classDirectories =  files(testableSubprojects.sourceSets.main.output)
-    executionData = files(testableSubprojects.jacocoTestReport.executionData)
+    additionalSourceDirs.from = files(testableSubprojects.sourceSets.main.allSource.srcDirs)
+    sourceDirectories.from = files(testableSubprojects.sourceSets.main.allSource.srcDirs)
+    classDirectories.from =  files(testableSubprojects.sourceSets.main.output)
+    executionData.from = files(testableSubprojects.jacocoTestReport.executionData)
     
     reports {
         xml.enabled = true
