Better serialization of time

--- a/build.gradle
+++ b/build.gradle
@@ -188,6 +188,7 @@ project(":vaunt-generator") {
 
         compile "org.reflections:reflections:$reflectionsVersion"
         compile "com.fasterxml.jackson.datatype:jackson-datatype-guava:$jacksonVersion"
+        compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion"
 
         testCompile "com.jayway.jsonpath:json-path-assert:$jsonPathAssertVersion"
     }
