Adjustment of core and generator to test packaging standard

--- a/build.gradle
+++ b/build.gradle
@@ -146,7 +146,7 @@ allprojects {
     sourceSets {
         test.groovy.srcDirs(
                 "src/test/unit",
-                "src/test/functional",
+                "src/test/functional"
         )
     }
 }
